@@ -53,7 +53,13 @@
 #include <sys/resource.h>
 #include <sys/ipc.h>
 #include <sys/shm.h>
+#ifdef HAVE_FREETYPE_H
 #include <freetype.h>
+#endif
+#ifdef HAVE_FREETYPE_FREETYPE_H
+#include <freetype/freetype.h>
+#endif
+
 
 #define FILEPATH_LEN_MAX 4096
 
